--- a/package.json
+++ b/package.json
@@ -30,16 +30,31 @@
     "url": "https://github.com/awgv/use-timer-hook.git"
   },
   "release": {
-      "plugins": [
-        ["@semantic-release/commit-analyzer", {
+    "plugins": [
+      [
+        "@semantic-release/commit-analyzer",
+        {
           "preset": "angular",
           "releaseRules": [
-            {"type": "docs", "release": "patch"},
-            {"type": "refactor", "release": "patch"},
-            {"type": "build", "release": "patch"}
+            {
+              "type": "docs",
+              "release": "patch"
+            },
+            {
+              "type": "refactor",
+              "release": "patch"
+            },
+            {
+              "type": "build",
+              "release": "patch"
+            }
           ]
-        }]
-      ]
+        }
+      ],
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/npm",
+      "@semantic-release/github"
+    ]
   },
   "publishConfig": {
     "access": "public"
